--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 boto3==1.34.162
 botocore==1.34.162
+iniconfig==2.0.0
 jmespath==1.0.1
+packaging==24.1
+pluggy==1.5.0
+pytest==8.3.2
 python-dateutil==2.9.0.post0
 s3transfer==0.10.2
 six==1.16.0
