--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,12 @@
-aiohappyeyeballs==2.3.6
-aiohttp==3.10.3
-aiosignal==1.3.1
-aiosqlite==0.20.0
-annotated-types==0.7.0
-anyio==4.4.0
-appdirs==1.4.4
-asgiref==3.8.1
-attrs==24.2.0
 bentoml==1.3.2
 boto3==1.34.162
 botocore==1.34.162
-cattrs==23.1.2
-certifi==2024.7.4
-circus==0.18.0
-click==8.1.7
-click-option-group==0.5.6
-cloudpickle==3.0.0
-deepmerge==1.1.1
-Deprecated==1.2.14
-frozenlist==1.4.1
-fs==2.4.16
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-httpx-ws==0.6.0
-idna==3.7
-importlib-metadata==6.11.0
-inflection==0.5.1
-iniconfig==2.0.0
-inquirerpy==0.3.4
-Jinja2==3.1.4
-jmespath==1.0.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-multidict==6.0.5
-numpy==2.0.1
-nvidia-ml-py==11.525.150
-opentelemetry-api==1.20.0
-opentelemetry-instrumentation==0.41b0
-opentelemetry-instrumentation-aiohttp-client==0.41b0
-opentelemetry-instrumentation-asgi==0.41b0
-opentelemetry-sdk==1.20.0
-opentelemetry-semantic-conventions==0.41b0
-opentelemetry-util-http==0.41b0
-packaging==24.1
-pathspec==0.12.1
-pfzy==0.3.4
-pip-requirements-parser==32.0.1
-pluggy==1.5.0
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-pyparsing==3.1.2
+orjson==3.10.7
+PyJWT==2.9.0
 pytest==8.3.2
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-python-multipart==0.0.9
-PyYAML==6.0.2
-pyzmq==26.1.0
-rich==13.7.1
-s3transfer==0.10.2
-schema==0.7.7
-setuptools==72.2.0
-simple-di==0.1.5
-six==1.16.0
-sniffio==1.3.1
+pytest-asyncio==0.23.8
+pytest-mock==3.14.0
+python-dotenv==1.0.1
+scikit-learn==1.5.1
 starlette==0.38.2
-tomli_w==1.0.0
-tornado==6.4.1
-typing_extensions==4.12.2
-urllib3==2.2.2
-uv==0.2.37
-uvicorn==0.30.6
-watchfiles==0.23.0
-wcwidth==0.2.13
-wrapt==1.16.0
-wsproto==1.2.0
-yarl==1.9.4
-zipp==3.20.0
+structlog==24.4.0
